# fastapi-meeting-service

./: .gitignore  README.md  local.db  pyproject.toml
alembic/: env.py
alembic/versions/: 29f122e2cc6b_auto_generate_migration.py  924ca7518da2_initialization.py
appserver/: app.py  db.py
appserver/apps/account/: endpoints.py  models.py
appserver/apps/calendar/: models.py
appserver/libs/datetime/: calendar.py
tests/: conftest.py
tests/apps/account/: test_endpoints.py
