[project]
name = "fastapi-meeting-service"
version = "0.1.0"
description = ""
authors = [
    {name = "dev-myeongsu",email = "00.myeongsu@gmail.com"}
]
requires-python = ">=3.13"
dependencies = [
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "sqlalchemy-utc (>=0.14.0,<0.15.0)",
    "aiosqlite (>=0.22.1,<0.23.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "greenlet (>=3.4.0,<4.0.0)",
    "pydantic (>=2.13.3,<3.0.0)",
    "email-validator (>=2.3.0,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
