[project]
name = "fastapi-meeting-service"
version = "0.1.0"
description = "약속 잡기 프로젝트"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
    "fastapi[all]>=0.136.1",
    "greenlet>=3.5.0",
    "sqlalchemy-utc>=0.14.0",
    "sqlmodel>=0.0.38",
]
